[gd_scene load_steps=20 format=3 uid="uid://ba224ivygvark"]

[ext_resource type="Script" path="res://scripts/storage.gd" id="1_vsq5h"]
[ext_resource type="Texture2D" uid="uid://c6a0kgtxtrjy2" path="res://assets/cruz.png" id="3_chgud"]
[ext_resource type="Texture2D" uid="uid://ba1l65s1b63a6" path="res://assets/flecha.png" id="4_emcqx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ayjd1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_3ikuh"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_0n6s3"]
font_size = 8

[sub_resource type="SpriteFrames" id="SpriteFrames_6deaw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fut3t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ebhf1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ipdut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_4t1h4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_i4rkc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xagde"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_i2en0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_g3xs4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_vny4r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_nd16v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_a0ak5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_vfayc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chgud")
}, {
"duration": 1.0,
"texture": ExtResource("4_emcqx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="materials" type="Node2D"]
script = ExtResource("1_vsq5h")

[node name="background" type="Sprite2D" parent="."]

[node name="mercurio" type="Node2D" parent="."]

[node name="mercurio_image" type="AnimatedSprite2D" parent="mercurio"]
position = Vector2(39, 152)
sprite_frames = SubResource("SpriteFrames_ayjd1")

[node name="mercurio_button" type="Button" parent="mercurio"]
offset_left = 29.0
offset_top = 143.0
offset_right = 50.0
offset_bottom = 163.0

[node name="name" type="Label" parent="mercurio"]
visible = false
offset_left = -10.0
offset_top = 125.0
offset_right = 92.0
offset_bottom = 148.0
text = "Name : Mercury"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="mercurio"]
visible = false
offset_left = -11.0
offset_top = 120.0
offset_right = 90.0
offset_bottom = 142.0
text = "Type : Base"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="estanyo" type="Node2D" parent="."]
position = Vector2(217, 27)

[node name="estanyo_image" type="AnimatedSprite2D" parent="estanyo"]
position = Vector2(-120, 125)
sprite_frames = SubResource("SpriteFrames_6deaw")

[node name="estanyo_button" type="Button" parent="estanyo"]
offset_left = -131.0
offset_top = 115.0
offset_right = -110.0
offset_bottom = 135.0

[node name="name" type="Label" parent="estanyo"]
visible = false
offset_left = -171.0
offset_top = 97.0
offset_right = -69.0
offset_bottom = 120.0
text = "Name : Tin"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="estanyo"]
visible = false
offset_left = -169.0
offset_top = 91.0
offset_right = -68.0
offset_bottom = 113.0
text = "Type : Base"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="oro" type="Node2D" parent="."]

[node name="oro_image" type="AnimatedSprite2D" parent="oro"]
position = Vector2(150, 152)
sprite_frames = SubResource("SpriteFrames_fut3t")

[node name="oro_button" type="Button" parent="oro"]
offset_left = 139.0
offset_top = 142.0
offset_right = 160.0
offset_bottom = 162.0

[node name="name" type="Label" parent="oro"]
visible = false
offset_left = 99.0
offset_top = 125.0
offset_right = 201.0
offset_bottom = 148.0
text = "Name : Gold"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="oro"]
visible = false
offset_left = 103.0
offset_top = 120.0
offset_right = 204.0
offset_bottom = 142.0
text = "Type : Base"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="cobre" type="Node2D" parent="."]
position = Vector2(163, 113)

[node name="cobre_image" type="AnimatedSprite2D" parent="cobre"]
position = Vector2(46, 38)
sprite_frames = SubResource("SpriteFrames_ebhf1")

[node name="cobre_button" type="Button" parent="cobre"]
offset_left = 36.0
offset_top = 29.0
offset_right = 57.0
offset_bottom = 49.0

[node name="name" type="Label" parent="cobre"]
visible = false
offset_left = -3.0
offset_top = 7.0
offset_right = 99.0
offset_bottom = 30.0
text = "Name : Copper Oxide
"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="cobre"]
visible = false
offset_left = -5.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 24.0
text = "Type : Base"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="hierro" type="Node2D" parent="."]
position = Vector2(233, 113)

[node name="hierro_image" type="AnimatedSprite2D" parent="hierro"]
position = Vector2(47, 37)
sprite_frames = SubResource("SpriteFrames_ipdut")

[node name="hierro_button" type="Button" parent="hierro"]
offset_left = 37.0
offset_top = 27.0
offset_right = 58.0
offset_bottom = 47.0

[node name="name" type="Label" parent="hierro"]
visible = false
offset_left = -3.0
offset_top = 7.0
offset_right = 99.0
offset_bottom = 30.0
text = "Name : Iron Oxide"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="hierro"]
visible = false
offset_left = -5.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 24.0
text = "Type : Base"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="litio" type="Node2D" parent="."]
position = Vector2(-10, -4)

[node name="litio_image" type="AnimatedSprite2D" parent="litio"]
position = Vector2(47, 48)
sprite_frames = SubResource("SpriteFrames_4t1h4")

[node name="litio_button" type="Button" parent="litio"]
offset_left = 37.0
offset_top = 38.0
offset_right = 58.0
offset_bottom = 58.0

[node name="name" type="Label" parent="litio"]
visible = false
offset_left = -3.0
offset_top = 20.0
offset_right = 99.0
offset_bottom = 43.0
text = "Name : Lithium"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="litio"]
visible = false
offset_left = -1.0
offset_top = 13.0
offset_right = 100.0
offset_bottom = 35.0
text = "Type : Enhancers"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="cal" type="Node2D" parent="."]
position = Vector2(41, 6)

[node name="cal_image" type="AnimatedSprite2D" parent="cal"]
position = Vector2(47, 38)
sprite_frames = SubResource("SpriteFrames_i4rkc")

[node name="cal_button" type="Button" parent="cal"]
offset_left = 36.0
offset_top = 29.0
offset_right = 57.0
offset_bottom = 49.0
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="cal"]
visible = false
offset_left = -3.0
offset_top = 9.0
offset_right = 99.0
offset_bottom = 32.0
text = "Name : Lime"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="cal"]
visible = false
offset_left = -2.0
offset_top = 3.0
offset_right = 99.0
offset_bottom = 25.0
text = "Type : Enhancers"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="ladrillo" type="Node2D" parent="."]
position = Vector2(42, 9)

[node name="ladrillo_image" type="AnimatedSprite2D" parent="ladrillo"]
position = Vector2(101, 34)
sprite_frames = SubResource("SpriteFrames_xagde")

[node name="ladrillo_button" type="Button" parent="ladrillo"]
offset_left = 91.0
offset_top = 25.0
offset_right = 112.0
offset_bottom = 45.0
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="ladrillo"]
visible = false
offset_left = 49.0
offset_top = 7.0
offset_right = 151.0
offset_bottom = 30.0
text = "Name: Brick oil"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="ladrillo"]
visible = false
offset_left = 52.0
offset_top = 1.0
offset_right = 153.0
offset_bottom = 23.0
text = "Type : Enhancers"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="magnesio" type="Node2D" parent="."]
position = Vector2(-2, 46)

[node name="magnesio_image" type="AnimatedSprite2D" parent="magnesio"]
position = Vector2(47, 38)
sprite_frames = SubResource("SpriteFrames_i2en0")

[node name="magnesio_button" type="Button" parent="magnesio"]
offset_left = 36.0
offset_top = 29.0
offset_right = 57.0
offset_bottom = 49.0
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="magnesio"]
visible = false
offset_left = -3.0
offset_top = 7.0
offset_right = 99.0
offset_bottom = 30.0
text = "Name: Magnesium"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="magnesio"]
visible = false
offset_left = -5.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 24.0
text = "Type : Enhancers"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="oropimente" type="Node2D" parent="."]
position = Vector2(22, 21)

[node name="oropimente_image" type="AnimatedSprite2D" parent="oropimente"]
position = Vector2(81, 64)
sprite_frames = SubResource("SpriteFrames_g3xs4")

[node name="oropimente_button" type="Button" parent="oropimente"]
offset_left = 71.0
offset_top = 54.0
offset_right = 92.0
offset_bottom = 74.0
metadata/_edit_use_anchors_ = true

[node name="name" type="Label" parent="oropimente"]
visible = false
offset_left = 30.0
offset_top = 35.0
offset_right = 132.0
offset_bottom = 58.0
text = "Name: Orpiment"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="oropimente"]
visible = false
offset_left = 30.0
offset_top = 30.0
offset_right = 131.0
offset_bottom = 52.0
text = "Type : Enhancers"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="miel" type="Node2D" parent="."]

[node name="miel_image" type="AnimatedSprite2D" parent="miel"]
position = Vector2(225, 43)
sprite_frames = SubResource("SpriteFrames_vny4r")

[node name="miel_button" type="Button" parent="miel"]
offset_left = 214.0
offset_top = 33.0
offset_right = 235.0
offset_bottom = 53.0

[node name="name" type="Label" parent="miel"]
visible = false
offset_left = 172.0
offset_top = 13.0
offset_right = 274.0
offset_bottom = 36.0
text = "Name: Clover Honey"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="miel"]
visible = false
offset_left = 175.0
offset_top = 8.0
offset_right = 276.0
offset_bottom = 30.0
text = "Type: Flavors"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="lupulo" type="Node2D" parent="."]

[node name="lupulo_image" type="AnimatedSprite2D" parent="lupulo"]
position = Vector2(271, 42)
sprite_frames = SubResource("SpriteFrames_nd16v")

[node name="lupulo_button" type="Button" parent="lupulo"]
offset_left = 261.0
offset_top = 33.0
offset_right = 282.0
offset_bottom = 53.0

[node name="name" type="Label" parent="lupulo"]
visible = false
offset_left = 221.0
offset_top = 14.0
offset_right = 323.0
offset_bottom = 37.0
text = "Name: Hops"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="lupulo"]
visible = false
offset_left = 220.0
offset_top = 9.0
offset_right = 321.0
offset_bottom = 31.0
text = "Type: Flavors"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="jengibre" type="Node2D" parent="."]

[node name="jengibre_image" type="AnimatedSprite2D" parent="jengibre"]
position = Vector2(225, 84)
sprite_frames = SubResource("SpriteFrames_a0ak5")

[node name="jengibre_button" type="Button" parent="jengibre"]
offset_left = 215.0
offset_top = 74.0
offset_right = 236.0
offset_bottom = 94.0

[node name="name" type="Label" parent="jengibre"]
visible = false
offset_left = 174.0
offset_top = 58.0
offset_right = 276.0
offset_bottom = 81.0
text = "Name: Ginger"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="jengibre"]
visible = false
offset_left = 176.0
offset_top = 54.0
offset_right = 277.0
offset_bottom = 76.0
text = "Type: Flavors"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[node name="canela" type="Node2D" parent="."]

[node name="canela_image" type="AnimatedSprite2D" parent="canela"]
position = Vector2(271, 84)
sprite_frames = SubResource("SpriteFrames_vfayc")

[node name="canela_button" type="Button" parent="canela"]
offset_left = 260.0
offset_top = 74.0
offset_right = 281.0
offset_bottom = 94.0

[node name="name" type="Label" parent="canela"]
visible = false
offset_left = 218.0
offset_top = 57.0
offset_right = 320.0
offset_bottom = 80.0
text = "Name: Cinnamon"
label_settings = SubResource("LabelSettings_3ikuh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="type" type="Label" parent="canela"]
visible = false
offset_left = 218.0
offset_top = 53.0
offset_right = 319.0
offset_bottom = 75.0
text = "Type: Flavors"
label_settings = SubResource("LabelSettings_0n6s3")
horizontal_alignment = 1

[connection signal="mouse_entered" from="mercurio/mercurio_button" to="." method="_on_mercurio_button_mouse_entered"]
[connection signal="mouse_exited" from="mercurio/mercurio_button" to="." method="_on_mercurio_button_mouse_exited"]
[connection signal="mouse_entered" from="estanyo/estanyo_button" to="." method="_on_estanyo_button_mouse_entered"]
[connection signal="mouse_exited" from="estanyo/estanyo_button" to="." method="_on_estanyo_button_mouse_exited"]
[connection signal="mouse_entered" from="oro/oro_button" to="." method="_on_oro_button_mouse_entered"]
[connection signal="mouse_exited" from="oro/oro_button" to="." method="_on_oro_button_mouse_exited"]
[connection signal="mouse_entered" from="cobre/cobre_button" to="." method="_on_cobre_button_mouse_entered"]
[connection signal="mouse_exited" from="cobre/cobre_button" to="." method="_on_cobre_button_mouse_exited"]
[connection signal="mouse_entered" from="hierro/hierro_button" to="." method="_on_hierro_button_mouse_entered"]
[connection signal="mouse_exited" from="hierro/hierro_button" to="." method="_on_hierro_button_mouse_exited"]
[connection signal="mouse_entered" from="litio/litio_button" to="." method="_on_litio_button_mouse_entered"]
[connection signal="mouse_exited" from="litio/litio_button" to="." method="_on_litio_button_mouse_exited"]
[connection signal="mouse_entered" from="cal/cal_button" to="." method="_on_cal_button_mouse_entered"]
[connection signal="mouse_exited" from="cal/cal_button" to="." method="_on_cal_button_mouse_exited"]
[connection signal="mouse_entered" from="ladrillo/ladrillo_button" to="." method="_on_ladrillo_button_mouse_entered"]
[connection signal="mouse_exited" from="ladrillo/ladrillo_button" to="." method="_on_ladrillo_button_mouse_exited"]
[connection signal="mouse_entered" from="magnesio/magnesio_button" to="." method="_on_magnesio_button_mouse_entered"]
[connection signal="mouse_exited" from="magnesio/magnesio_button" to="." method="_on_magnesio_button_mouse_exited"]
[connection signal="mouse_entered" from="oropimente/oropimente_button" to="." method="_on_oropimente_button_mouse_entered"]
[connection signal="mouse_exited" from="oropimente/oropimente_button" to="." method="_on_oropimente_button_mouse_exited"]
[connection signal="mouse_entered" from="miel/miel_button" to="." method="_on_miel_button_mouse_entered"]
[connection signal="mouse_exited" from="miel/miel_button" to="." method="_on_miel_button_mouse_exited"]
[connection signal="mouse_entered" from="lupulo/lupulo_button" to="." method="_on_lupulo_button_mouse_entered"]
[connection signal="mouse_exited" from="lupulo/lupulo_button" to="." method="_on_lupulo_button_mouse_exited"]
[connection signal="mouse_entered" from="jengibre/jengibre_button" to="." method="_on_jengibre_button_mouse_entered"]
[connection signal="mouse_exited" from="jengibre/jengibre_button" to="." method="_on_jengibre_button_mouse_exited"]
[connection signal="mouse_entered" from="canela/canela_button" to="." method="_on_canela_button_mouse_entered"]
[connection signal="mouse_exited" from="canela/canela_button" to="." method="_on_canela_button_mouse_exited"]
